# js-parser

./: Cargo.toml  README.md  build.rs
parser/: Cargo.toml
parser/src/: calc.l  calc.y  lib.rs  main.rs  parser.rs
src/: ast.rs  calc.l  calc.y  grammar.lalrpop  lexer.rs  main.rs  parser.rs  peg.rs
test/: README.md  example.ast.json  example.js  example_tokens
