[package]
name = "js-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
peg = "0.8.3"
phf = { version = "0.11.2", features = ["macros"] }
unicode-xid = "0.2.4"
lexgen = "0.15.0"
lexgen_util = "0.15.0"

[build-dependencies]
lalrpop = "0.20.2"
